--- a/fpga/vivado/cwhusky.runs/impl_1/cwhusky_top.ltx
+++ b/fpga/vivado/cwhusky.runs/impl_1/cwhusky_top.ltx
@@ -469,7 +469,8 @@
                                 "nets": [
                                     {
                                         "name": "oadc/U_fifo/reset_1",
-                                        "isBus": false
+                                        "isBus": false,
+                                        "parentNetId": 55
                                     }
                                 ]
                             },
@@ -704,7 +705,7 @@
                                 "portIndex": 10,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/stream_write",
+                                        "name": "oadc/U_fifo/fast_fifo_read_mode_1",
                                         "isBus": false
                                     }
                                 ]
@@ -720,7 +721,7 @@
                                 "portIndex": 11,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/p_3_in18_in",
+                                        "name": "oadc/U_fifo/stream_segment_available_1",
                                         "isBus": false
                                     }
                                 ]
@@ -1106,7 +1107,8 @@
                                 "nets": [
                                     {
                                         "name": "oadc/U_fifo/reset",
-                                        "isBus": false
+                                        "isBus": false,
+                                        "parentNetId": 140
                                     }
                                 ]
                             },
@@ -1489,114 +1491,170 @@
                                         "isBus": false
                                     }
                                 ]
-                            }
-                        ]
-                    },
-                    {
-                        "type": "ILA_V3",
-                        "name": "oadc/tu_inst/U_ila_trig",
-                        "spec": "labtools_ila_v6",
-                        "ipName": "ila",
-                        "core_location": {
-                            "user_chain": 1,
-                            "slave_index": 3,
-                            "bscan_switch_index": 0
-                        },
-                        "uuid": "74E8F7B1832F540BB6A5AD47B5B7603A",
-                        "pins": [
+                            },
                             {
-                                "name": "probe0",
+                                "name": "probe11",
                                 "id": 52,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
                                 "leftIndex": 0,
                                 "rightIndex": 0,
-                                "portIndex": 0,
+                                "portIndex": 11,
                                 "nets": [
                                     {
-                                        "name": "oadc/tu_inst/adc_capture_done",
+                                        "name": "oadc/U_fifo/slow_fifo_rd_fast",
                                         "isBus": false
                                     }
                                 ]
                             },
                             {
-                                "name": "probe1",
+                                "name": "probe12",
                                 "id": 53,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
                                 "leftIndex": 0,
                                 "rightIndex": 0,
-                                "portIndex": 1,
+                                "portIndex": 12,
                                 "nets": [
                                     {
-                                        "name": "oadc/tu_inst/adc_capture_go",
+                                        "name": "oadc/U_fifo/fifo_read_fifoen",
                                         "isBus": false
                                     }
                                 ]
                             },
                             {
-                                "name": "probe2",
+                                "name": "probe13",
                                 "id": 54,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
-                                "isVector": false,
+                                "isVector": true,
                                 "leftIndex": 0,
-                                "rightIndex": 0,
-                                "portIndex": 2,
+                                "rightIndex": 3,
+                                "portIndex": 13,
                                 "nets": [
                                     {
-                                        "name": "oadc/tu_inst/trigger_now",
-                                        "isBus": false
+                                        "name": "oadc/U_fifo/slow_read_count",
+                                        "isBus": true,
+                                        "subnets": [
+                                            {
+                                                "name": "oadc/U_fifo/slow_read_count[3]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/slow_read_count[2]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/slow_read_count[1]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/slow_read_count[0]"
+                                            }
+                                        ]
                                     }
                                 ]
                             },
                             {
-                                "name": "probe3",
+                                "name": "probe14",
                                 "id": 55,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
                                 "leftIndex": 0,
                                 "rightIndex": 0,
-                                "portIndex": 3,
+                                "portIndex": 14,
                                 "nets": [
                                     {
-                                        "name": "oadc/tu_inst/trigger",
+                                        "name": "oadc/U_fifo/stream_segment_available",
                                         "isBus": false
                                     }
                                 ]
                             },
                             {
-                                "name": "probe4",
+                                "name": "probe15",
                                 "id": 56,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
                                 "leftIndex": 0,
                                 "rightIndex": 0,
-                                "portIndex": 4,
+                                "portIndex": 15,
                                 "nets": [
                                     {
-                                        "name": "oadc/tu_inst/arm_i",
+                                        "name": "oadc/U_fifo/fast_fifo_read_mode",
                                         "isBus": false
                                     }
                                 ]
-                            },
+                            }
+                        ]
+                    }
+                ],
+                "parent_nets": [
+                    {
+                        "id": 55,
+                        "name": "oadc/U_reg_openadc/SR[0]",
+                        "state_reg": [
                             {
-                                "name": "probe5",
-                                "id": 57,
-                                "type": "DATA_TRIGGER",
-                                "direction": "IN",
-                                "isVector": false,
-                                "leftIndex": 0,
-                                "rightIndex": 0,
-                                "portIndex": 5,
-                                "nets": [
+                                "name": "oadc/U_fifo/FSM_sequential_state_reg[1]",
+                                "states": [
                                     {
-                                        "name": "oadc/tu_inst/armed",
-                                        "isBus": false
+                                        "name": "pS_IDLE",
+                                        "val": "001"
+                                    },
+                                    {
+                                        "name": "pS_PRESAMP_FULL",
+                                        "val": "101"
+                                    },
+                                    {
+                                        "name": "pS_SEGMENT_DONE",
+                                        "val": "010"
+                                    },
+                                    {
+                                        "name": "pS_DONE",
+                                        "val": "000"
+                                    },
+                                    {
+                                        "name": "pS_TRIGGERED",
+                                        "val": "100"
+                                    },
+                                    {
+                                        "name": "pS_PRESAMP_FILLING",
+                                        "val": "011"
+                                    }
+                                ]
+                            }
+                        ]
+                    },
+                    {
+                        "id": 140,
+                        "name": "oadc/U_reg_openadc/SR[0]",
+                        "state_reg": [
+                            {
+                                "name": "oadc/U_fifo/FSM_sequential_state_reg[1]",
+                                "states": [
+                                    {
+                                        "name": "pS_IDLE",
+                                        "val": "001"
+                                    },
+                                    {
+                                        "name": "pS_PRESAMP_FULL",
+                                        "val": "101"
+                                    },
+                                    {
+                                        "name": "pS_SEGMENT_DONE",
+                                        "val": "010"
+                                    },
+                                    {
+                                        "name": "pS_DONE",
+                                        "val": "000"
+                                    },
+                                    {
+                                        "name": "pS_TRIGGERED",
+                                        "val": "100"
+                                    },
+                                    {
+                                        "name": "pS_PRESAMP_FILLING",
+                                        "val": "011"
                                     }
                                 ]
                             }
